Feat: Novos exercícios

--- a/Lógica de Programação e Algoritmos/AULA03/exercicio_02.ipynb
+++ b/Lógica de Programação e Algoritmos/AULA03/exercicio_02.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCÍCIO - AULA 02"
+    "# EXERCÍCIO - Aula Prática 2 - Algoritmos sequenciais. Estruturas de seleção ou decisão"
    ]
   },
   {
