--- a/Lógica de Programação e Algoritmos/AULA04/exercicio_03.ipynb
+++ b/Lógica de Programação e Algoritmos/AULA04/exercicio_03.ipynb
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCÍCIO - AULA 03"
+    "# EXERCÍCIO - Aula Prática 3 - Algoritmos iterativos. Estruturas de repetição"
    ]
   },
   {
