--- a/Lógica de Programação e Algoritmos/AULA05/aula_05.ipynb
+++ b/Lógica de Programação e Algoritmos/AULA05/aula_05.ipynb
@@ -268,25 +268,68 @@
     "    while x < min or x > max:\n",
     "        x = int(input(pergunta))\n",
     "    return x\n",
-    "\n",
+    "def existeArquivo(nomeArquivo):\n",
+    "    try:\n",
+    "        a = open(nomeArquivo, 'rt')\n",
+    "        a.close()\n",
+    "    except FileNotFoundError:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "def criarArquivo(nomeArquivo):\n",
+    "    try:\n",
+    "        a = open(nomeArquivo, 'wt+')\n",
+    "        a.close()\n",
+    "    except:\n",
+    "        print('Erro na criação do arquivo.')\n",
+    "    else:\n",
+    "        print(f'{nomeArquivo} criando com sucesso!\\n')\n",
+    "def cadastrarJogo(nomeArquivo, nomeJogo, nomeVideogame):\n",
+    "    try:\n",
+    "        a = open(nomeArquivo, 'at')\n",
+    "    except:\n",
+    "        print('Erro ao abrir o arquivo')\n",
+    "    else:\n",
+    "        a.write(f'{nomeJogo};{nomeVideogame}\\n')\n",
+    "        print('Cadastro feito com sucesso...')\n",
+    "    finally:\n",
+    "        a.close()\n",
+    "def listarArquivo(nomeArquivo):\n",
+    "    try:\n",
+    "        a = open(nomeArquivo, 'rt')\n",
+    "    except:\n",
+    "        print('Erro ao ler o arquivo.')\n",
+    "    else:\n",
+    "        print(a.read())\n",
+    "    finally:\n",
+    "        a.close()\n",
     "\n",
     "# MAIN\n",
-    "arquivo = 'games.txt'\n",
     "menu()\n",
+    "arquivo = 'games.csv'\n",
+    "if existeArquivo(arquivo):\n",
+    "    print('Arquivo localizado no computador.')\n",
+    "else:\n",
+    "    print('Arquivo inexistente')\n",
+    "    criarArquivo(arquivo)\n",
     "\n",
     "while True:\n",
     "    try:\n",
-    "        item_menu = valida_int('Escolha qual item do menu', 1, 3)\n",
+    "        item_menu = valida_int('Escolha qual item do menu: ', 1, 3)\n",
     "        if item_menu == 3:\n",
     "            print(40 * '#' + '\\n')\n",
-    "            print('Finalizando sistema...')\n",
+    "            print('Encerrando o programa...')\n",
     "            break\n",
-    "        elif item_menu == 1:\n",
+    "        elif item_menu == 1: \n",
     "            print(40 * '#' + '\\n')\n",
-    "            print('Cadastrar novo item')\n",
+    "            print('Opção de cadastrar novo item selecionada... \\n')\n",
+    "            nomeJogo = input('Nome do jogo: ')\n",
+    "            nomeVideogame = input('Nome do videogame: ')\n",
+    "            cadastrarJogo(arquivo, nomeJogo, nomeVideogame)\n",
     "        elif item_menu == 2:\n",
     "            print(40 * '#' + '\\n')\n",
-    "            print('Lista de cadastros')\n",
+    "            print('Opção de listar itens cadastrados selecionada...\\n')\n",
+    "            listarArquivo(arquivo)\n",
     "    except ValueError:\n",
     "        print('Valor invalido.')"
    ]
