--- a/Lógica de Programação e Algoritmos/AULA06/exercicios_aula06.ipynb
+++ b/Lógica de Programação e Algoritmos/AULA06/exercicios_aula06.ipynb
@@ -82,44 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------------------------\n",
-      "-- JOKENPÔ DO DERSIIN --\n",
-      "------------------------\n",
-      "--------- MENU ---------\n",
-      "------------------------\n",
-      "-   Escolha uma opção  - \n",
-      " 1 - Pedra\n",
-      " 2 - Papel\n",
-      " 3 - Tesoura\n",
-      " 0 - SAIR\n",
-      "------------------------\n",
-      "Parabéns você ganhou.\n",
-      "------------------------\n",
-      "Parabéns você ganhou.\n",
-      "------------------------\n",
-      "Parabéns você ganhou.\n",
-      "------------------------\n",
-      "Parabéns você ganhou.\n",
-      "------------------------\n",
-      "Parabéns você ganhou.\n",
-      "------------------------\n",
-      "Parabéns você ganhou.\n",
-      "------------------------\n",
-      "Finalizando jogo...\n",
-      "------------------------\n",
-      " Resultado final: JOGADOR 6 x 0 COMPUTADOR\n",
-      " Resultado final: !!! PARABÉNS VOCÊ GANHOU !!!\n",
-      " Resultado final: TOTAL DE VITÓRIAS: 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" \n",
     "Crie um jogo de pedra, papel ou tesoura (Jokenpô).\n",
@@ -149,8 +114,7 @@
     "vitorias_computador = 0\n",
     "vitorias_jogador = 0\n",
     "while True:\n",
-    "    lista = [1, 2, 3]\n",
-    "    escolha_computador = random.choice(lista)\n",
+    "    escolha_computador = random.randint(1,3)\n",
     "    escolha_jogador = valida_int('Qual opção escolhida?: ', 0, 3)\n",
     "\n",
     "    if escolha_jogador == 0:\n",
@@ -186,6 +150,99 @@
     "        print('\\n!! O COMPUTADOR VENCEU !!')\n",
     "    else:\n",
     "        print('\\n!! VOCÊ VENCEU !!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercício 03"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "- Crie um programa para ler o nome, ano de nascimento e sexo de diferentes pessoas.\n",
+    "- Armazene os dados em um dicionário com listas\n",
+    "- Ao encerrar o cadastro, apresente:\n",
+    "    - O total de cadastros efetuados\n",
+    "    - A média das idades das pessoas\n",
+    "    - Uma lista de mulheres com menos de 30 anos\n",
+    "    - Uma lista de homens com idade acima da média\n",
+    "\"\"\"\n",
+    "def valida_int(pergunta, min, max):\n",
+    "    x = int(input(pergunta))\n",
+    "    while x < min or x > max:\n",
+    "        x = int(input(pergunta))\n",
+    "    return x\n",
+    "\n",
+    "def valida_genero(pergunta):\n",
+    "    y = input(pergunta)\n",
+    "    genero = 'mfMF'\n",
+    "    while y not in genero:\n",
+    "        y = input(pergunta)\n",
+    "    return y\n",
+    "\n",
+    "def cadastro_de_usuarios():\n",
+    "    cadastrar_usuarios = {}\n",
+    "    cadastrar_usuarios['nome'] = input('Nome: ').capitalize\n",
+    "    cadastrar_usuarios['ano'] = int(input('Ano de nascimento: '))\n",
+    "    cadastrar_usuarios['sexo'] = valida_genero('Qual gênero (M/F): ')\n",
+    "    usuarios_cadastrados.append(cadastrar_usuarios.copy())  # Adiciona o usuário à lista\n",
+    "\n",
+    "# Inicializando as variáveis\n",
+    "usuarios_cadastrados = []\n",
+    "total_cadastrados = 0\n",
+    "soma_idade = 0\n",
+    "lista_mulheres = []\n",
+    "lista_homens = []\n",
+    "\n",
+    "# Loop para cadastro de usuários\n",
+    "while True:\n",
+    "    escolha = valida_int('CADASTRAR NOVO USUÁRIO? \\n1 - SIM | 0 - NÃO: ', 0, 1)\n",
+    "    if escolha == 1:\n",
+    "        cadastro_de_usuarios()\n",
+    "        total_cadastrados += 1\n",
+    "        continue\n",
+    "    elif escolha == 0:\n",
+    "        break\n",
+    "\n",
+    "# Cálculo da soma das idades e separação das listas\n",
+    "for usuario in usuarios_cadastrados:\n",
+    "    idade = 2024 - usuario['ano']\n",
+    "    soma_idade += idade\n",
+    "\n",
+    "# Calcula a média de idade fora do loop\n",
+    "media_idade = soma_idade / total_cadastrados\n",
+    "\n",
+    "# Preenche listas de mulheres com menos de 30 e homens acima da média de idade\n",
+    "for usuario in usuarios_cadastrados:\n",
+    "    idade = 2024 - usuario['ano']\n",
+    "    if usuario['sexo'] in 'fF' and idade < 30:\n",
+    "        lista_mulheres.append(usuario.copy())\n",
+    "    if usuario['sexo'] in 'mM' and idade > media_idade:\n",
+    "        lista_homens.append(usuario.copy())\n",
+    "\n",
+    "# Exibindo os resultados formatados\n",
+    "print(f'Total de cadastros: {total_cadastrados}')\n",
+    "print(f'Média das idades: {media_idade:.2f}')\n",
+    "print('\\nUsuários cadastrados:')\n",
+    "\n",
+    "# Exibe a lista de mulheres com menos de 30 anos\n",
+    "if lista_mulheres:\n",
+    "    print('Mulheres com menos de 30 anos:')\n",
+    "    for mulher in lista_mulheres:\n",
+    "        print(f\" - {mulher['nome']}, {2024 - mulher['ano']} anos\")\n",
+    "\n",
+    "# Exibe a lista de homens com idade acima da média\n",
+    "if lista_homens:\n",
+    "    print('\\nHomens com idade acima da média:')\n",
+    "    for homem in lista_homens:\n",
+    "        print(f\" - {homem['nome']}, {2024 - homem['ano']} anos\")\n"
    ]
   },
   {
