--- a/Lógica de Programação e Algoritmos/AULA06/pratica_aula06.ipynb
+++ b/Lógica de Programação e Algoritmos/AULA06/pratica_aula06.ipynb
@@ -251,6 +251,67 @@
    "source": [
     "# Aula Prática 6"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercício 01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Escolha o que deseja comprar: \\n1 - Maçã\\n2 - Laranja\\n3 - Banana')\n",
+    "produto = int(input('Qual sua escolha?? '))\n",
+    "quantidade = int(input('Quantas unidades?? '))\n",
+    "\n",
+    "match produto:\n",
+    "    case 1:\n",
+    "        pagar = quantidade * 2.3\n",
+    "        print(f'Você comprou {quantidade} maças. Total à pagar: {pagar}')\n",
+    "    case 2:\n",
+    "        pagar = quantidade * 3.6\n",
+    "        print(f'Você comprou {quantidade} laranjas. Total à pagar: {pagar}')\n",
+    "    case 3:\n",
+    "        pagar = quantidade * 1.85\n",
+    "        print(f'Você comprou {quantidade} bananas. Total à pagar: {pagar}')\n",
+    "    case _:\n",
+    "        print('Produto inexistente')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercício 02"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checagem_tipo(dado):\n",
+    "    match dado:\n",
+    "        case str(dado):\n",
+    "            print(f'String: {dado}')\n",
+    "        case int(dado):\n",
+    "            print(f'Inteiro: {dado}')\n",
+    "        case float(dado):\n",
+    "            print(f'Float: {dado}')\n",
+    "        case _:\n",
+    "            print('Tipo desconhecido de dado')\n",
+    "\n",
+    "dados = ['Python', 42, 3.14, 23, 'C']\n",
+    "\n",
+    "for dado in dados:\n",
+    "    checagem_tipo(dado)"
+   ]
   }
  ],
  "metadata": {
