Feat: Trabalho 2/4 - Lógica de Programação

--- a/Lógica de Programação e Algoritmos/trabalho.ipynb
+++ b/Lógica de Programação e Algoritmos/trabalho.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bem vindo ao sistema do WANDERSON TEIXEIRA SOUSA\n",
-      "Informe o valor base do plano: 134.05\n",
-      "Informe a idade do cliente: 34\n",
-      "O valor mensal do plano é de: R$ 301.61\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Calcula o valor mensal do plano de acordo com a idade do cliente.\n",
@@ -71,14 +60,138 @@
     "            idade = int(input('Informe a idade do cliente: '))\n",
     "\n",
     "        # Calcula e exibe o valor mensal do plano com base na idade e valor base\n",
-    "        print(f'Informe o valor base do plano: {valorBase:.2f}')\n",
-    "        print(f'Informe a idade do cliente: {idade}')\n",
     "        print(f'O valor mensal do plano é de: R$ {valorMensal(idade, valorBase):.2f}')\n",
     "        break  # Encerra o loop quando as entradas são válidas\n",
     "\n",
     "    # Captura exceções de entrada inválida e solicita ao usuário que insira valores numéricos\n",
     "    except ValueError:\n",
     "        print('Entrada inválida. Por favor, insira um número válido.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### QUESTÃO 2 de 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------- Bem-vindo a Pizzaria do Wanderson Teixeira ----------\n",
+      "----------------------------------------------------------------\n",
+      "--------------------------- Cardápio ---------------------------\n",
+      "----------------------------------------------------------------\n",
+      "---|  Tamanho  |   Pizza Salgada (PS)   |   Pizza Doce (PD) |---\n",
+      "---|     P     |        R$ 30.00        |     R$ 34.00      |---\n",
+      "---|     M     |        R$ 45.00        |     R$ 48.00      |---\n",
+      "---|     G     |        R$ 60.00        |     R$ 66.00      |---\n",
+      "----------------------------------------------------------------\n",
+      "\n",
+      "Você pediu uma Pizza Doce no tamanho M: R$ 48.00 reais\n",
+      "\n",
+      "O valor total a ser pago: R$ 48.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Calcula o valor total do pedido de pizzas de acordo com o sabor e o tamanho escolhidos pelo cliente.\n",
+    "\n",
+    "Funções:\n",
+    "- menu(): Exibe o cardápio com preços de pizzas salgadas e doces.\n",
+    "- pedir_pizza(tamanho, sabor, acumulador): Calcula o valor da pizza baseada no tamanho e sabor escolhidos pelo cliente e acumula o valor total do pedido.\n",
+    "\n",
+    "Parâmetros da função pedir_pizza:\n",
+    "- tamanho (str): Tamanho da pizza ('P', 'M', ou 'G').\n",
+    "- sabor (str): Sabor da pizza ('PS' para pizza salgada, 'PD' para pizza doce).\n",
+    "- acumulador (float, opcional): Acumulador que armazena o valor total do pedido. Valor inicial é 0.\n",
+    "\n",
+    "Retorno:\n",
+    "- float: Valor total atualizado após o pedido.\n",
+    "\n",
+    "O programa permite que o cliente faça múltiplos pedidos, valida as entradas e calcula o valor final.\n",
+    "\"\"\"\n",
+    "\n",
+    "# Função para exibir o menu da pizzaria e informações iniciais\n",
+    "def menu():\n",
+    "    print(10 * '-' + ' Bem-vindo a Pizzaria do Wanderson Teixeira ' + 10 * '-')\n",
+    "    print(64 * '-')\n",
+    "    print(27 * '-' + ' Cardápio ' + 27 * '-')\n",
+    "    print(64 * '-')\n",
+    "    print(3 * '-' + '|  Tamanho  |   Pizza Salgada (PS)   |   Pizza Doce (PD) |' + 3 * '-')\n",
+    "    print(3 * '-' + '|     P     |        R$ 30.00        |     R$ 34.00      |' + 3 * '-')\n",
+    "    print(3 * '-' + '|     M     |        R$ 45.00        |     R$ 48.00      |' + 3 * '-')\n",
+    "    print(3 * '-' + '|     G     |        R$ 60.00        |     R$ 66.00      |' + 3 * '-')\n",
+    "    print(64 * '-')\n",
+    "\n",
+    "# Função para processar o pedido de pizza\n",
+    "def pedir_pizza(tamanho, sabor, acumulador=0):\n",
+    "    # Verifica o sabor da pizza e atribui o preço de acordo com o tamanho\n",
+    "    if sabor == 'PS':\n",
+    "        if tamanho == 'P':\n",
+    "            preco = 30\n",
+    "        elif tamanho == 'M':\n",
+    "            preco = 45\n",
+    "        elif tamanho == 'G':\n",
+    "            preco = 60\n",
+    "        print(f'\\nVocê pediu uma Pizza Salgada no tamanho {tamanho}: R$ {preco:.2f} reais')\n",
+    "    elif sabor == 'PD':\n",
+    "        if tamanho == 'P':\n",
+    "            preco = 34\n",
+    "        elif tamanho == 'M':\n",
+    "            preco = 48\n",
+    "        elif tamanho == 'G':\n",
+    "            preco = 66\n",
+    "        print(f'\\nVocê pediu uma Pizza Doce no tamanho {tamanho}: R$ {preco:.2f} reais')\n",
+    "    \n",
+    "    # Soma o preço ao acumulador de total\n",
+    "    acumulador += preco  \n",
+    "    return acumulador\n",
+    "\n",
+    "# Exibe o menu\n",
+    "menu()\n",
+    "acumulador = 0  # Inicializa o acumulador de preço total\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        # Solicita o sabor da pizza ao cliente\n",
+    "        sabor = input('\\nEntre com o sabor desejado (PS/PD): ').upper()\n",
+    "        # Verifica se o sabor informado é inválido\n",
+    "        while sabor not in ['PS', 'PD']:\n",
+    "            print('Sabor inválido. Tente novamente.\\n')\n",
+    "            sabor = input('Entre com o sabor desejado (PS/PD): ').upper()\n",
+    "        \n",
+    "        # Solicita o tamanho da pizza ao cliente\n",
+    "        tamanho = input('Entre com o tamanho desejado (P/M/G): ').upper()\n",
+    "        # Verifica se o tamanho informado é inválido\n",
+    "        while tamanho not in ['P', 'M', 'G']:\n",
+    "            print('Tamanho inválido. Tente novamente.\\n')\n",
+    "            tamanho = input('Entre com o tamanho desejado (P/M/G): ').upper()\n",
+    "\n",
+    "        # Atualiza o acumulador com o valor retornado pela função pedir_pizza\n",
+    "        acumulador = pedir_pizza(tamanho, sabor, acumulador)\n",
+    "        \n",
+    "        # Pergunta se o cliente deseja mais alguma coisa\n",
+    "        mais_pizza = input('\\nDeseja mais alguma coisa? (S/N): ').upper()\n",
+    "\n",
+    "        # Verifica se a resposta é inválida\n",
+    "        while mais_pizza not in ['S', 'N']:\n",
+    "            mais_pizza = input('\\nDeseja mais alguma coisa? (S/N): ').upper()\n",
+    "        \n",
+    "        # Finaliza o programa caso o cliente não queira mais pizzas\n",
+    "        if mais_pizza == 'N':\n",
+    "            print(f'\\nO valor total a ser pago: R$ {acumulador:.2f}')\n",
+    "            break\n",
+    "\n",
+    "    except ValueError:\n",
+    "        print('\\nEntrada inválida. Por favor, tente novamente.')\n"
    ]
   }
  ],
