--- a/Lógica de Programação e Algoritmos/trabalho.ipynb
+++ b/Lógica de Programação e Algoritmos/trabalho.ipynb
@@ -77,29 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------- Bem-vindo a Pizzaria do Wanderson Teixeira ----------\n",
-      "----------------------------------------------------------------\n",
-      "--------------------------- Cardápio ---------------------------\n",
-      "----------------------------------------------------------------\n",
-      "---|  Tamanho  |   Pizza Salgada (PS)   |   Pizza Doce (PD) |---\n",
-      "---|     P     |        R$ 30.00        |     R$ 34.00      |---\n",
-      "---|     M     |        R$ 45.00        |     R$ 48.00      |---\n",
-      "---|     G     |        R$ 60.00        |     R$ 66.00      |---\n",
-      "----------------------------------------------------------------\n",
-      "\n",
-      "Você pediu uma Pizza Doce no tamanho M: R$ 48.00 reais\n",
-      "\n",
-      "O valor total a ser pago: R$ 48.00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Calcula o valor total do pedido de pizzas de acordo com o sabor e o tamanho escolhidos pelo cliente.\n",
@@ -192,6 +172,105 @@
     "\n",
     "    except ValueError:\n",
     "        print('\\nEntrada inválida. Por favor, tente novamente.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### QUESTÃO 3 de 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bem-vindos a Madeireira do Wanderson Teixeira Sousa\n",
+      "Total a pagar: R$ 98095.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Calcula o valor total da compra de toras de madeira, considerando o tipo de madeira, a quantidade de toras, o desconto proporcional à quantidade, e o custo do transporte.\n",
+    "\n",
+    "Parâmetros:\n",
+    "    valor_madeira (str): O tipo de madeira escolhido, que pode ser:\n",
+    "        - 'PIN': Pinho\n",
+    "        - 'PER': Peroba\n",
+    "        - 'MOG': Mogno\n",
+    "        - 'IPE': Ipê\n",
+    "        - 'IMB': Imbuia\n",
+    "    quantidade (float): A quantidade de toras em metros cúbicos (m³). O valor deve estar entre 0 e 2000.\n",
+    "    desconto (float): Percentual de desconto aplicado com base na quantidade de toras:\n",
+    "        - 0% para menos de 100 m³\n",
+    "        - 4% para entre 100 e 499 m³\n",
+    "        - 9% para entre 500 e 999 m³\n",
+    "        - 16% para 1000 m³ ou mais\n",
+    "    valor_transporte (float): O custo do transporte, que pode ser:\n",
+    "        - 1000.00 para transporte rodoviário\n",
+    "        - 2000.00 para transporte ferroviário\n",
+    "        - 2500.00 para transporte hidroviário\n",
+    "\n",
+    "Retorno:\n",
+    "    str: O valor total a pagar, formatado com duas casas decimais (ex: \"R$ 12345.67\").\n",
+    "\"\"\"\n",
+    "\n",
+    "def escolha_tipo():\n",
+    "    madeiras_validas = {'PIN': 150.40, 'PER': 170.20, 'MOG': 190.90, 'IPE': 210.10, 'IMB': 220.70}\n",
+    "    while True:\n",
+    "        madeira = input('\\nEntre com o Tipo de Madeira desejado\\nPIN - Tora de Pinho\\nPER - Tora de Peroba\\nMOG - Tora de Mogno\\nIPE - Tora de Ipê\\nIMB - Tora de Imbuia\\nQual código: ').upper()\n",
+    "        if madeira in madeiras_validas:\n",
+    "            return madeiras_validas[madeira]\n",
+    "        else:\n",
+    "            print('Escolha inválida, entre com o modelo novamente.')\n",
+    "\n",
+    "def qtd_toras():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            quantidade = float(input('\\nEntre com a quantidade de toras (m³): '))\n",
+    "            if quantidade < 0 or quantidade > 2000:\n",
+    "                print('Não aceitamos pedidos com essa quantidade de toras. Entre novamente.')\n",
+    "            elif quantidade < 100:\n",
+    "                return quantidade, 0\n",
+    "            elif quantidade < 500:\n",
+    "                return quantidade, 4\n",
+    "            elif quantidade < 1000:\n",
+    "                return quantidade, 9\n",
+    "            else:\n",
+    "                return quantidade, 16\n",
+    "        except ValueError:\n",
+    "            print('Quantidade inválida. Por favor, insira um número.')\n",
+    "\n",
+    "def transporte():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            opcao = int(input('\\nEscolha o tipo de Transporte:\\n1- Transporte Rodoviário - R$ 1000.00\\n2 - Transporte Ferroviário - R$ 2000.00\\n3 - Transporte Hidroviário - R$ 2500.00\\nQual transporte (1/2/3)? '))\n",
+    "            if opcao == 1:\n",
+    "                return 1000\n",
+    "            elif opcao == 2:\n",
+    "                return 2000\n",
+    "            elif opcao == 3:\n",
+    "                return 2500\n",
+    "            else:\n",
+    "                print('Opção inválida.')\n",
+    "        except ValueError:\n",
+    "            print('Escolha inválida. Insira um número.')\n",
+    "\n",
+    "    \n",
+    "print(\"Bem-vindos a Madeireira do Wanderson Teixeira Sousa\")\n",
+    "\n",
+    "valor_madeira = escolha_tipo()\n",
+    "quantidade, desconto = qtd_toras()\n",
+    "valor_transporte = transporte()\n",
+    "\n",
+    "total = (valor_madeira * quantidade * (1 - desconto / 100)) + valor_transporte\n",
+    "print(f'Total a pagar: R$ {total:.2f}')\n"
    ]
   }
  ],
