--- a/Lógica de Programação e Algoritmos/trabalho.ipynb
+++ b/Lógica de Programação e Algoritmos/trabalho.ipynb
@@ -272,6 +272,172 @@
     "total = (valor_madeira * quantidade * (1 - desconto / 100)) + valor_transporte\n",
     "print(f'Total a pagar: R$ {total:.2f}')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### QUESTÃO 4 de 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valida_int(pergunta, min, max=None):\n",
+    "    \"\"\"\n",
+    "    Função para validar a entrada do usuário, garantindo que seja um inteiro dentro de um intervalo.\n",
+    "    \n",
+    "    :param pergunta: A pergunta a ser exibida ao usuário.\n",
+    "    :param min: O valor mínimo permitido.\n",
+    "    :param max: O valor máximo permitido (opcional).\n",
+    "    :return: Retorna um número inteiro válido.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    while True:\n",
+    "        try:\n",
+    "            x = int(input(pergunta))\n",
+    "            if x < min:\n",
+    "                print(f\"Por favor, insira um valor maior ou igual a {min}.\")\n",
+    "            elif max is not None and x > max:\n",
+    "                print(f\"Por favor, insira um valor entre {min} e {max}.\")\n",
+    "            else:\n",
+    "                return x  # Retorna o valor válido\n",
+    "        except ValueError:\n",
+    "            print(\"Entrada inválida. Por favor, insira um número válido.\")\n",
+    "\n",
+    "# Lista para armazenar contatos\n",
+    "lista_contatos = [] \n",
+    "id_global = 2412021  # Meu ID ALUNO (ID INICIAL PARA CADASTRO)\n",
+    "\n",
+    "def cadastrar_contato(id):\n",
+    "    \"\"\"\n",
+    "    Função para cadastrar um novo contato.\n",
+    "    \n",
+    "    :param id: O ID do novo contato.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Pergunta informações do contato\n",
+    "    print(f'Id do Contato: {id_global}')\n",
+    "    nome = input('Por favor entre com o nome do Contato: ')\n",
+    "    atividade = input('Por favor entre com a Atividade do contato: ')\n",
+    "    telefone = input('Por favor entre com o telefone do contato: ')\n",
+    "    \n",
+    "    contato = {\n",
+    "        'id': id,\n",
+    "        'nome': nome,\n",
+    "        'atividade': atividade,\n",
+    "        'telefone': telefone\n",
+    "    }\n",
+    "    lista_contatos.append(contato.copy())  # Adiciona contato à lista\n",
+    "    print('Cadastro feito com sucesso...')\n",
+    "\n",
+    "def consultar_contatos():\n",
+    "    \"\"\"\n",
+    "    Função para consultar contatos cadastrados.\n",
+    "    \"\"\"\n",
+    "    while True:\n",
+    "        print(20 * '-' + ' MENU CONSULTAR CONTATO ' + 20 * '-')\n",
+    "        item_escolha = valida_int('Escolha a opção desejada: \\n1 - Consultar Todos os Contatos\\n2 - Consultar Contato por id\\n3 - Consultar Contato(s) por Atividade\\n4 - Retornar\\nQual escolha: ', 1, 4)\n",
+    "        \n",
+    "        if item_escolha == 1:\n",
+    "            listar_contatos()\n",
+    "        elif item_escolha == 2:\n",
+    "            id_contato = valida_int('Digite o Id do contato: ', 1)\n",
+    "            listar_contato_por_id(id_contato)\n",
+    "        elif item_escolha == 3:\n",
+    "            atividade_contato = input('Digite a Atividade do contato: ')\n",
+    "            listar_contatos_por_atividade(atividade_contato)\n",
+    "        elif item_escolha == 4:\n",
+    "            print('Retornando ao menu principal...\\n')\n",
+    "            return  # Retorna ao menu principal\n",
+    "        else:\n",
+    "            print('Opção inválida.')\n",
+    "\n",
+    "def listar_contatos():\n",
+    "    \"\"\"\n",
+    "    Função para listar todos os contatos cadastrados.\n",
+    "    \"\"\"\n",
+    "    if not lista_contatos:\n",
+    "        print('Nenhum contato cadastrado.')\n",
+    "    else:\n",
+    "        for contato in lista_contatos:\n",
+    "            print(f\"Id: {contato['id']}\\nNome: {contato['nome']}\\nAtividade: {contato['atividade']}\\nTelefone: {contato['telefone']}\\n\")\n",
+    "\n",
+    "def listar_contato_por_id(id_contato):\n",
+    "    \"\"\"\n",
+    "    Função para listar um contato específico pelo ID.\n",
+    "    \n",
+    "    :param id_contato: O ID do contato a ser listado.\n",
+    "    \"\"\"\n",
+    "    for contato in lista_contatos:\n",
+    "        if contato['id'] == id_contato:\n",
+    "            print(f'Id: {contato[\"id\"]}\\nNome: {contato[\"nome\"]}\\nAtividade: {contato[\"atividade\"]}\\nTelefone: {contato[\"telefone\"]}\\n')\n",
+    "            return\n",
+    "    print(f'Contato com Id {id_contato} não encontrado.')\n",
+    "\n",
+    "def listar_contatos_por_atividade(atividade_contato):\n",
+    "    \"\"\"\n",
+    "    Função para listar contatos com base na atividade.\n",
+    "    \n",
+    "    :param atividade_contato: A atividade que será usada para filtrar os contatos.\n",
+    "    \"\"\"\n",
+    "    encontrou = False\n",
+    "    for contato in lista_contatos:\n",
+    "        if contato['atividade'] == atividade_contato:\n",
+    "            print(f'Id: {contato[\"id\"]}\\nNome: {contato[\"nome\"]}\\nAtividade: {contato[\"atividade\"]}\\nTelefone: {contato[\"telefone\"]}\\n')\n",
+    "            encontrou = True\n",
+    "    if not encontrou:\n",
+    "        print(f'Nenhum contato encontrado com a atividade \"{atividade_contato}\".')\n",
+    "\n",
+    "def remover_contato():\n",
+    "    \"\"\"\n",
+    "    Função para remover um contato da lista.\n",
+    "    \"\"\"\n",
+    "    id_contato = valida_int('Digite o Id do contato que deseja remover: ', 1)\n",
+    "    for contato in lista_contatos:\n",
+    "        if contato['id'] == id_contato:\n",
+    "            lista_contatos.remove(contato)\n",
+    "            print(f'Contato com Id {id_contato} removido com sucesso.')\n",
+    "            return\n",
+    "    print(f'Contato com Id {id_contato} não encontrado.')\n",
+    "\n",
+    "def menu():\n",
+    "    \"\"\"\n",
+    "    Função para exibir o menu principal do programa.\n",
+    "    \"\"\"\n",
+    "    print(64 * '-')\n",
+    "    print(24 * '-' + ' MENU PRINCIPAL ' + 24 * '-')\n",
+    "    print('Escolha a opção desejada:')\n",
+    "    print('1 - Cadastrar Contato')\n",
+    "    print('2 - Consultar Contato')\n",
+    "    print('3 - Remover Contato')\n",
+    "    print('4 - Sair')\n",
+    "    print(64 * '-')\n",
+    "\n",
+    "# Início do programa\n",
+    "print('\\nBem-vindo à Lista de Contatos do Wanderson Teixeira')\n",
+    "while True:\n",
+    "    menu() # Exibe o menu principal\n",
+    "    item_menu = valida_int('Escolha qual item do menu: ', 1, 4)\n",
+    "    print()\n",
+    "    if item_menu == 4:\n",
+    "        print('Encerrando o programa...')\n",
+    "        break # Encerra o programa\n",
+    "    elif item_menu == 1: \n",
+    "        print(20 * '-' + ' MENU CADASTRAR CONTATO ' + 20 * '-')\n",
+    "        id_global += 1  # Incrementa o ID global para o próximo contato\n",
+    "        cadastrar_contato(id_global) # Chama a função para cadastrar um novo contato\n",
+    "\n",
+    "    elif item_menu == 2:\n",
+    "        consultar_contatos() # Chama a função para consultar contatos\n",
+    "\n",
+    "    elif item_menu == 3:\n",
+    "        print(20 * '-' + ' MENU REMOVER CONTATO ' + 20 * '-')\n",
+    "        remover_contato() # Chama a função para remover um contato\n"
+   ]
   }
  ],
  "metadata": {
